--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </p> <p class="introduction"> Whether you're looking to consult healthcare professionals, or explore resources on medical conditions and treatments, we're here to help.</p>
     </div>
     
-    <div style="text-align: center;"><div class="slideshow"><img src="./images/pic1.jpg" alt="" width="1500px">
+    <div style="text-align: center;"><div class="slideshow"><img src="./pic1.jpg" alt="" width="1500px">
         <img src="pic3.jpg" alt="" width="1500px">
         <img src="pic5.jpg" alt="" width="1500px"></div></div>
     <div class="box">
